infra/k8s/iris/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: iris
  labels:
    trust.codedang.com/rabbitmq: 'true'
