infra/k8s/iris/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iris
  namespace: iris
spec:
  replicas: 20
  selector:
    matchLabels:
      app: iris
  template:
    metadata:
      labels:
        app: iris
    spec:
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app: iris
      containers:
        - name: iris
          image: ghcr.io/skkuding/codedang-iris
          ports:
            - name: pprof
              containerPort: 6060
              protocol: TCP
          resources:
            limits:
              cpu: 1
              memory: 1.5Gi
            requests:
              cpu: 1
              memory: 1.5Gi
          volumeMounts:
            - name: cgroup
              mountPath: /sys/fs/cgroup
              readOnly: false
            - name: rabbitmq-ca
              mountPath: /etc/codedang/certs
              readOnly: true
          securityContext:
            privileged: true
      volumes:
        - name: cgroup
          hostPath:
            path: /sys/fs/cgroup
            type: Directory
        - name: rabbitmq-ca
          configMap:
            name: rabbitmq-ca-cert
            items:
              - key: ca.crt
                path: ca.crt
