infra/k8s/iris/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: iris-pprof
  namespace: iris
spec:
  selector:
    app: iris
  ports:
    - port: 6060
      targetPort: 6060
