infra/k8s/iris/base/HTTPRoutes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: iris-pprof-httproute
  namespace: iris
spec:
  parentRefs:
    - name: main-gateway
      namespace: kube-system
      sectionName: https-wildcard
  hostnames:
    - pprof.codedang.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /debug/pprof
      backendRefs:
        - name: iris-pprof
          port: 6060
